<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/option_search"
        app:showAsAction="ifRoom|collapseActionView"
        android:orderInCategory="2"
        />
    <item
        android:id="@+id/kebab_settings"
        android:title="@string/option_settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/kebab_help"
        android:title="@string/option_help"
        app:showAsAction="never"/>

    <item
        android:id="@+id/kebab_website"
        android:title="@string/option_website"
        app:showAsAction="never"/>
</menu>