<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_rooms">

    <fragment
        android:id="@+id/navigation_rooms"
        android:name="ar.edu.itba.hci.hoh.ui.rooms.RoomsFragment"
        android:label="@string/title_rooms"
        tools:layout="@layout/fragment_rooms" />

    <fragment
        android:id="@+id/navigation_devices"
        android:name="ar.edu.itba.hci.hoh.ui.devices.DevicesFragment"
        android:label="@string/title_devices"
        tools:layout="@layout/fragment_devices" >
        <action
            android:id="@+id/action_select_category"
            app:destination="@+id/navigation_device" />
    </fragment>

    <fragment
        android:id="@+id/navigation_device"
        android:name="ar.edu.itba.hci.hoh.ui.device.DeviceFragment"
        android:label="@string/title_devices"
        tools:layout="@layout/fragment_devices" >
        <argument
            android:name="category"
            app:argType="string"
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="ar.edu.itba.hci.hoh.ui.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_routines"
        android:name="ar.edu.itba.hci.hoh.ui.routines.RoutinesFragment"
        android:label="@string/title_routines"
        tools:layout="@layout/fragment_favorites" />
</navigation>