<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorDevCardBackgroundLight"
        app:cardElevation="@dimen/cardElevation">

        <LinearLayout
            android:id="@+id/dialog_oven_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical"
            android:gravity="center">

            <include layout="@layout/dialog_device_header"/>

            <LinearLayout
                android:id="@+id/oven_panel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp">
                <Switch
                    android:id="@+id/oven_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textOff="@string/device_status_off"
                    android:textOn="@string/device_status_on" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_semibold"
                    android:text="@string/device_dialog_temperature"
                    android:textColor="@color/colorDevCardContent"
                    android:textSize="20sp"
                    android:textStyle="italic" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <SeekBar
                        android:id="@+id/oven_temp_bar"
                        android:layout_width="@dimen/temperature_bar_width"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="3dp"
                        android:progressBackgroundTint="@color/colorPrimary"
                        android:progressTint="@color/colorPrimary"
                        android:thumbTint="@color/colorPrimary"
                        android:layout_alignParentStart="true"/>
                    <TextView
                        android:id="@+id/oven_temp_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="3dp"
                        android:layout_gravity="center"
                        android:fontFamily="@font/open_sans_semibold"
                        android:textColor="@color/colorDevCardContent"
                        android:textSize="20sp"
                        android:textStyle="italic"
                        android:layout_alignParentEnd="true"
                        android:layout_toStartOf="@id/oven_temp_bar"/>
                </RelativeLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_semibold"
                    android:text="@string/device_dialog_heat_source"
                    android:textColor="@color/colorDevCardContent"
                    android:textSize="20sp"
                    android:textStyle="italic" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/oven_heat_up"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/device_dialog_up" />
                    <Button
                        android:id="@+id/oven_heat_down"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/device_dialog_down" />
                    <Button
                        android:id="@+id/oven_heat_full"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/device_dialog_full" />
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_semibold"
                    android:text="@string/device_dialog_convection_mode"
                    android:textColor="@color/colorDevCardContent"
                    android:textSize="20sp"
                    android:textStyle="italic" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/oven_conv_off"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/device_status_off" />
                    <Button
                        android:id="@+id/oven_conv_eco"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/device_dialog_eco" />
                    <Button
                        android:id="@+id/oven_conv_full"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/device_dialog_full" />
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_semibold"
                    android:text="@string/device_dialog_grill_mode"
                    android:textColor="@color/colorDevCardContent"
                    android:textSize="20sp"
                    android:textStyle="italic" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/oven_grill_off"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/device_status_off" />
                    <Button
                        android:id="@+id/oven_grill_eco"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/device_dialog_eco" />
                    <Button
                        android:id="@+id/oven_grill_full"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/device_dialog_full" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.core.widget.NestedScrollView>